codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__alarms__thread_alarms_popup_keeps_selected_alarm_prompt_visible.snap
---
source: tui/src/chatwidget/tests/alarms.rs
assertion_line: 58
expression: popup
---
  Thread alarms

› 1. delay 0s • one-shot  Give me a random animal name.

  Press enter to confirm or esc to go back
